--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ i18n-embed-fl = "0.8"
 anyhow = "1.0.86"
 rust-embed = "8.4.0"
 once_cell = "1.19.0"
+enum-iterator = "2.1.0"
 
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic"
