--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ lto = "fat"
 [dependencies]
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
-reqwest = { version = "0.12.4", features = ["json", "stream"] }
+reqwest = { version = "0.12.4", features = ["json", "blocking", "stream"] }
 tokio = { version = "1", features = ["full"] }
 i18n-embed = { version = "0.14.1", features = [
 	"fluent-system",
