add wgpu feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,4 +31,4 @@ base64 = "0.22.1"
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic"
 default-features = false
-features = ["applet", "tokio", "wayland"]
+features = ["applet", "tokio", "wayland", "wgpu"]
