add dev profile optimizations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "cosmic-applet-ollama"
 version = "0.1.0"
 edition = "2021"
 
+[profile.dev]
+opt-level = 1
+overflow-checks = false
+
 [profile.release]
 lto = "fat"
 
