--- a/data/io.github.elevenhsoft.CosmicExtAppletOllama.desktop
+++ b/data/io.github.elevenhsoft.CosmicExtAppletOllama.desktop
@@ -5,7 +5,7 @@ Exec=cosmic-ext-applet-ollama
 Terminal=false
 Categories=Cosmic;Iced;
 Keywords=Cosmic;Iced;
-Icon=io.github.elevenhsoft.CosmicExtAppletOllama
+Icon=io.github.elevenhsoft.CosmicExtAppletOllama-symbolic
 StartupNotify=true
 NoDisplay=true
 X-CosmicApplet=true
