fix: wgpu rendering issue

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,10 @@ markdown = "0.3.0"
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic"
 default-features = false
-features = ["applet", "tokio", "wayland", "wgpu"]
+features = ["applet", "tokio", "wayland"]
+
+[features]
+wgpu = ["libcosmic/wgpu"]
 
 [dependencies.cosmic-syntax-theme]
 git = "https://github.com/pop-os/cosmic-syntax-theme.git"
