--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ default-features = false
 features = ["applet", "tokio", "wayland"]
 
 [features]
+default = ["wgpu"]
 wgpu = ["libcosmic/wgpu"]
 
 [dependencies.cosmic-syntax-theme]
