--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ serde_json = "1.0.117"
 reqwest = { version = "0.12.4", features = ["json", "blocking", "stream"] }
 tokio = { version = "1", features = ["full"] }
 i18n-embed = { version = "0.14.1", features = [
-    "fluent-system",
-    "desktop-requester",
+  "fluent-system",
+  "desktop-requester",
 ] }
 i18n-embed-fl = "0.8"
 anyhow = "1.0.86"
@@ -35,7 +35,7 @@ markdown = "0.3.0"
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic"
 default-features = false
-features = ["applet", "tokio", "wayland"]
+features = ["applet", "tokio", "wayland", "clipboard"]
 
 [features]
 default = ["wgpu"]
