--- a/data/dev.heppen.ollama.desktop
+++ b/data/dev.heppen.ollama.desktop
@@ -5,7 +5,7 @@ Exec=cosmic-ext-applet-ollama
 Terminal=false
 Categories=Cosmic;Iced;
 Keywords=Cosmic;Iced;
-Icon=io.github.elevenhsoft.CosmicExtAppletOllama-symbolic
+Icon=dev.heppen.ollama-symbolic
 StartupNotify=true
 NoDisplay=true
 X-CosmicApplet=true
