--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,32 +1,33 @@
 [package]
 name = "cosmic-ext-applet-ollama"
-version = "0.1.0"
-edition = "2021"
+version = "0.1.1"
+edition = "2024"
 
-[profile.dev]
-opt-level = 1
-overflow-checks = false
+[profile.release]
+opt-level = 3
+panic = "abort"
+lto = "thin"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.12.20", features = ["json", "blocking", "stream"] }
+reqwest = { version = "0.12.23", features = ["json", "blocking", "stream"] }
 tokio = { version = "1", features = ["full"] }
-i18n-embed = { version = "0.15", features = [
+i18n-embed = { version = "0.16", features = [
   "fluent-system",
   "desktop-requester",
 ] }
-i18n-embed-fl = "0.9"
+i18n-embed-fl = "0.10"
 anyhow = "1.0"
 rust-embed = "8.7"
 once_cell = "1.21"
 async-stream = "0.3"
 futures = "0.3"
 bytes = "1.10"
-ron = "0.10"
+ron = "0.11"
 dirs = "6.0"
 chrono = "0.4"
-ashpd = { version = "0.11", features = ["wayland"] }
+ashpd = { version = "0.12", features = ["wayland"] }
 base64 = "0.22"
 open = "5.3"
 
